hphp/test/zend/good/ext/gettext/tests/gettext_bind_textdomain_codeset-wrongparams.php.skipif
<?php 
	if (!extension_loaded("gettext")) {
		die("skip"); 
	}
?>