hphp/test/zend/bad/ext/zlib/tests/compress_zlib_wrapper.php.skipif
<?php if (!extension_loaded("zlib")) die("skip"); ?>